[project]
name = "claude-parser-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.28.2",
    "alembic>=1.18.4",
    "anthropic>=0.102.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "firecrawl-py>=4.26.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
]
